fix footer stretching beyond 1200px

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -10,21 +10,28 @@ $elements-color: #E2E6E9;
 // #TODO: move the color variables into a separate file
 
 .footer {
-  padding: 32px 16px 32px 16px;
   width: 100%;
-  box-sizing: border-box;
   box-shadow: 0px -1px 0px #E2E6E9;
+  display: flex;
+  justify-content: center;
 
-  @include tablet {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-  }
+  &_wrapper {
+    padding: 32px 16px 32px 16px;
+    width: 100%;
+    box-sizing: border-box;
+    max-width: 1200px;
 
-  @include desktop {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+    @include tablet {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+
+    @include desktop {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
   }
 
   &__logo {
@@ -69,6 +76,10 @@ $elements-color: #E2E6E9;
     &__link {
       text-decoration: none;
       color: $secondary-color;
+
+      &:hover {
+        color: $primary-color;
+      }
     }
   }
 
